force-app/main/default/objects/Calendar_Colors__c/Calendar_Colors__c.object-meta.xml
<CustomObject>
    <label>Calendar Colors</label>
    <nameField>
        <label>Calendar Colors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>