force-app/main/default/objects/Calendar_Colors__c/fields/Back_Color__c.field-meta.xml
<CustomField>
    <fullName>Back_Color__c</fullName>
    <label>Back Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>