force-app/main/default/objects/Calendar_Colors__c/fields/Selected_User__c.field-meta.xml
<CustomField>
    <fullName>Selected_User__c</fullName>
    <label>Selected User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>