force-app/main/default/objects/Calendar_Colors__c/fields/Selected_Van__c.field-meta.xml
<CustomField>
    <fullName>Selected_Van__c</fullName>
    <label>Selected Van</label>
    <length>255</length>
    <type>Text</type>
</CustomField>