force-app/main/default/objects/Calendar_Colors__c/fields/User_Based__c.field-meta.xml
<CustomField>
    <fullName>User_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Based</label>
    <type>Checkbox</type>
</CustomField>