force-app/main/default/objects/Calendar_Colors__c/fields/Van_Based__c.field-meta.xml
<CustomField>
    <fullName>Van_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Van Based</label>
    <type>Checkbox</type>
</CustomField>