force-app/main/default/objects/Calendar_Colors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Back_Color__c</columns>
    <columns>Object__c</columns>
    <columns>Order__c</columns>
    <columns>Selected_User__c</columns>
    <columns>Selected_Van__c</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>Text_Color__c</columns>
    <columns>Type__c</columns>
    <columns>User__c</columns>
    <columns>User_Based__c</columns>
    <columns>Van_Based__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>